<resources>
    <string name="app_name">Video Player</string>
    <string name="all_videos">All Video</string>
    <string name="all_folder">All Folder</string>

    <string name="total_folder">Total Folders: </string>
    <string name="total_videos">Total Videos: </string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="video_name">Video Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00:00</string>
    <string name="image">Image</string>

    <string name="loading">Loading...</string>
    <string name="semi_colon">:</string>

    <string name="lock">Lock Icon</string>
    <string name="back_btn">Back Button</string>
    <string name="menu">Menu</string>

    <string name="prev_btn">Previous button</string>
    <string name="next_btn">Next Button</string>
    <string name="repeat_btn">Repeat Button</string>
    <string name="fullscreen_btn">FullScreen Button</string>
    <string name="play_btn">Play Button</string>


    //for menu
    <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitles</string>
    <string name="booster">Booster</string>
    <string name="speed">Speed</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pip_mode">PIP Mode</string>
    <string name="forward_video">forward Video</string>
    <string name="rewind_video">Rewind Video</string>
    <string name="search">Search</string>
    <string name="created_by">Created By...</string>
    <string name="riyas_pullur">Riyas Pullur</string>
    <string name="mob_91_9072990008">Mob: +91 9072990008</string>
    <string name="email_riyaspullurofficial_gmail_com">Email : riyaspullurofficial@gmail.com</string>
    <string name="title_activity_about_us">AboutUs</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>