<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"

    android:background="#42000000"
    android:orientation="vertical">
  <com.google.android.exoplayer2.ui.DefaultTimeBar
      android:id="@id/exo_progress"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    app:scrubber_color="@color/white"
    app:played_color="@color/white"
    app:unplayed_color="#80ffffff"
      app:buffered_color="#80ffffff"
      app:scrubber_enabled_size="10dp"
      app:scrubber_disabled_size="5dp"
      android:layout_marginHorizontal="5dp"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView android:id="@id/exo_position"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="16sp"
      android:textStyle="bold"
      android:textColor="@color/white"
        android:text="@string/duration"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/semi_colon"
        android:layout_marginVertical="10dp"/>

    <TextView android:id="@id/exo_duration"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="16sp"
      android:textStyle="bold"
      android:textColor="@color/white"
        android:text="@string/loading"
        android:layout_margin="10dp"/>

  </LinearLayout>

</LinearLayout>
<!--<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center"
android:paddingTop="4dp"
android:orientation="horizontal">

<ImageButton android:id="@id/exo_prev"
    style="@style/ExoMediaButton.Previous"/>

<ImageButton android:id="@id/exo_rew"
    style="@style/ExoMediaButton.Rewind"/>

<ImageButton android:id="@id/exo_shuffle"
    style="@style/ExoMediaButton"/>

<ImageButton android:id="@id/exo_repeat_toggle"
    style="@style/ExoMediaButton"/>

<ImageButton android:id="@id/exo_play"
    style="@style/ExoMediaButton.Play"/>

<ImageButton android:id="@id/exo_pause"
    style="@style/ExoMediaButton.Pause"/>

<ImageButton android:id="@id/exo_ffwd"
    style="@style/ExoMediaButton.FastForward"/>

<ImageButton android:id="@id/exo_next"
    style="@style/ExoMediaButton.Next"/>

<ImageButton android:id="@id/exo_vr"
    style="@style/ExoMediaButton.VR"/>

</LinearLayout> -->