<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/audioTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:text="@string/audio_track"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/audio_track_icon"
            app:iconGravity="top"
            app:iconTint="@color/white"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="7dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subTitleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:text="@string/subtitles"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/subtitles_icon"
            app:iconGravity="top"
            app:iconTint="@color/white"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="7dp" />

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/audioBooster"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="?attr/selectableItemBackground"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true"-->
<!--            android:padding="5dp"-->
<!--            android:text="@string/booster"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@color/white"-->
<!--            app:icon="@drawable/booster_icon"-->
<!--            app:iconGravity="top"-->
<!--            app:iconTint="@color/white"-->
<!--            tools:layout_editor_absoluteX="217dp"-->
<!--            tools:layout_editor_absoluteY="7dp" />-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/speedBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:text="@string/speed"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/speed_icon"
            app:iconGravity="top"
            app:iconTint="@color/white"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="105dp" />

    </LinearLayout>
    <!--
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:text="@string/speed"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/speed_icon"
            app:iconGravity="top"
            app:iconTint="@color/white"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="105dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:text="@string/sleep_timer"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/timer_icon"
            app:iconGravity="top"
            app:iconTint="@color/white"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="108dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:text="@string/pip_mode"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/pip_icon"
            app:iconGravity="top"
            app:iconTint="@color/white"
            tools:layout_editor_absoluteX="217dp"
            tools:layout_editor_absoluteY="108dp" />
    </LinearLayout>-->




</LinearLayout>